# rse-sagemaker-shim

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  patch_image.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml
sagemaker_shim/: app.py  cli.py  exceptions.py  extract.py  logging.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_container_image.py  test_extract.py  test_io.py  test_models.py  test_patch_image.py  test_utils.py  utils.py
