[project]
authors = [
    {name = "James Meakin"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi!=0.89.0",
    "uvicorn",
    "click",
    "boto3",
]
name = "sagemaker-shim"
version = "0.4.0a0"
description = "Adapts algorithms that implement the Grand Challenge inference API for running in SageMaker"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.urls]
repository = "https://github.com/DIAGNijmegen/rse-sagemaker-shim"

[project.scripts]
sagemaker-shim = "sagemaker_shim.cli:cli"

[dependency-groups]
dev = [
    "pytest!=8.0.0",
    "docker!=7.0.0",
    "httpx",
    "pytest-randomly",
    "pytest-xdist",
    "pytest-cov",
    "staticx;sys_platform=='linux'",
    "pyinstaller",
    "boto3-stubs[s3]",
    "pytest-mock",
    "pytest-asyncio",
]

[tool.isort]
profile = "black"
known_first_party = ["sagemaker_shim", "tests"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py312']

[tool.pytest.ini_options]
markers = [
    "container",
    "registry",
]
python_files = "tests.py test_*.py *_tests.py"
addopts = "--strict-markers --showlocals -n auto --dist loadscope --cov-branch --cov-report term-missing --cov=tests/ --cov=sagemaker_shim/"
xfail_strict = true
filterwarnings = [
    # https://github.com/docker/docker-py/issues/2928
    "ignore::DeprecationWarning:docker.utils.utils:52",
    "ignore::DeprecationWarning:docker.utils.utils:53",
]

[tool.coverage.run]
omit = [
    "tests/batch_transform.py",
    "sagemaker_shim/cli.py", # This is covered by docker integration tests
]

[tool.uv]
package = true
